- disable dualsol and dualray conflict upgrades to maintain conflict store
- apply general conflict upgrades in conflict store
- inline SCIPgetStatus() to reduce computational overhead
- allow multi-aggregation of unbounded slack variables, which may enable more bound tightening due to a reduction in the number of unbounded variables

Examples and applications
-------------------------

- Add PBSolver application to solve pseudoboolean instances in OPB and WBO format while complying with PB competition rules
- Coloring: new parameter branching/coloring/strategy to choose the least/most fractional variable for branching

Interface changes
-----------------

### Deprecations

- The variable type \ref SCIP_VARTYPE_IMPLINT is deprecated in favor of a new enum \ref SCIP_IMPLINTTYPE that indicates if a
  variable is implied integral, independent of the variable type.
  The problem variable arrays is still sorted as:
  ```
   (0) | binary | integer | implied integral | continuous | (nvars),
  ```
  where the implied integral subsection is now subdivided into 3 parts (left to right):
  ```
  | binary implied integral | integer implied integral | continuous implied integral |
  ```
  SCIP 10 still supports using SCIP_VARTYPE_IMPLINT for backward compatibility, see SCIPcreateVar() and SCIPchgVarType() for more details.
  SCIP 11 will remove SCIP_VARTYPE_IMPLINT.
- SCIPsubversion() is deprecated and will be removed

### New and changed callbacks

- added SCIP_DECL_IISFINDERCOPY(), SCIP_DECL_IISFINDERFREE(), and SCIP_DECL_IISFINDEREXEC() for iisfinder implementations
- added a new callback TABLE_COLLECT for the table plugin that collects the data for the specific statistics table in a SCIP_DATATREE object
- for a table plugin, only one of the callbacks TABLE_COLLECT or TABLE_OUTPUT needs to be implemented, but implementing both is preferred;
  if TABLE_OUTPUT is omitted, then SCIP tries to print a table from the data given by TABLE_COLLECT