@@ -53,7 +53,7 @@
 #define HEUR_DESC             "LP rounding heuristic with infeasibility recovering also using continuous variables"
 #define HEUR_DISPCHAR         SCIP_HEURDISPCHAR_ROUNDING
 #define HEUR_PRIORITY         -5000
-#define HEUR_FREQ             10
+#define HEUR_FREQ             5
 #define HEUR_FREQOFS          0
 #define HEUR_MAXDEPTH         -1
 #define HEUR_TIMING           SCIP_HEURTIMING_DURINGLPLOOP
